Add some information to public components

--- a/front/src/app/components/public/about/about.component.css
+++ b/front/src/app/components/public/about/about.component.css
@@ -16,6 +16,7 @@
 
 .first-text{
   padding-right: 30px;
+  text-align: justify;
 }
 
 @media (max-width: 991.98px) {
@@ -130,5 +131,4 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
