--- a/front/src/app/components/public/about/about.component.html
+++ b/front/src/app/components/public/about/about.component.html
@@ -13,17 +13,17 @@
                     ¡Conócenos!
                 </h2>
                 <div class="p-1">
-                    <p class="first-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt at lectus quis
-                        hendrerit. Praesent eu nisi lorem. Suspendisse quis dolor sodales, aliquet sem eu, tincidunt
-                        enim. Mauris bibendum tellus eu purus rhoncus, sed luctus turpis pharetra. Sed et metus eget
-                        enim porttitor dictum ut at massa. Sed augue velit, feugiat luctus ornare vel, bibendum id
-                        urna. Sed posuere enim nibh, vel faucibus turpis blandit a. Nullam in purus a turpis porta
-                        ullamcorper vitae ut sapien. Duis fermentum pretium eleifend. Sed suscipit sagittis sapien
-                        in rhoncus. Nulla facilisi. Proin non purus diam.</p>
+                    <p class="first-text">Somos una destacada entidad del sector solidario a nivel departamental, con
+                        alrededor de 1.400 asociados. Nuestro principal objetivo es mejorar la calidad de vida de
+                        nuestros asociados y sus familias a través de un firme compromiso con el desarrollo y el
+                        bienestar. Ofrecemos una amplia gama de servicios financieros y de apoyo, diseñados para
+                        satisfacer las diversas necesidades de nuestra comunidad, y trabajamos constantemente para
+                        brindar soluciones efectivas que fortalezcan el bienestar y el crecimiento de cada integrante.
+                    </p>
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
 
     <!-- MISION -->
 
@@ -31,10 +31,7 @@
         <h1 class="title-color fw-bold mt-5">Nuestra misión</h1>
     </div>
     <div class="m-3">
-        <p class="small-text">Mejorar la calidad de vida de los asociados mediante la promoción del ahorro, la
-            prestación de servicios
-            de crédito y el desarrollo de actividades de bienestar, optimizando sus condiciones sociales, culturales
-            y económicas a través de la administración eficaz de sus recursos.</p>
+        <p class="small-text">“Contribuimos al progreso y mejora de la calidad de vida de nuestros asociados, colaboradores y sus familias, brindándoles soluciones oportunas de servicios de ahorro, crédito, actividades de bienestar social y cultural de manera innovadora, equitativa, confiable, que les permitan cumplir sus sueños, garantizando la continuidad en el tiempo de la organización.”</p>
     </div>
 
     <!-- VISION -->
@@ -43,8 +40,7 @@
         <h1 class="title-color fw-bold mt-5">Nuestra visión</h1>
     </div>
     <div class="m-3">
-        <p class="small-text">Ser reconocido en el 2026 como la primera y mejor alternativa en la oferta de servicios
-            de ahorro, crédito y bienestar social para los asociados.</p>
+        <p class="small-text">“Para el 2026, seremos el aliado preferido de nuestros asociados, en los servicios de ahorro, crédito y bienestar social, constituyéndonos como uno de los pilares en el desarrollo de sus vidas, siendo reconocidos a nivel regional por el compromiso social y cultural con sus asociados.”</p>
     </div>
 
     <!-- VALORES CORPORATIVOS -->
@@ -106,16 +102,19 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush card-text text-start">
-                        <li class="list-group-item"><i class="bi bi-emoji-smile-fill"></i> Implementar programas de bienestar social</li>
-                        <li class="list-group-item"><i class="bi bi-cash-stack"></i> Mantener la solidez financiera del Fondo</li>
-                        <li class="list-group-item"><i class="bi bi-graph-down-arrow"></i> Mantener entre 0 y 3% la Cartera Morosa Según los indicadores financieros establecidos por el Superintendencia de Economía Solidaria</li>
-                        <li class="list-group-item"><i class="bi bi-graph-up-arrow"></i> Aumentar la base social</li>
-                        <li class="list-group-item"><i class="bi bi-buildings-fill"></i> Fomentar el ahorro</li>
-                        <li class="list-group-item"><i class="bi bi-megaphone-fill"></i> Fortalecer los medios de comunicación</li>
-                        <li class="list-group-item"><i class="bi bi-person-workspace"></i> Incrementar el uso de los servicios</li>
-                        <li class="list-group-item"><i class="bi bi-people-fill"></i> Mejorar el nivel de competencia y desempeño de empleados</li>
-                        <li class="list-group-item"><i class="bi bi-exclamation-diamond-fill"></i> Fortalecer el Sistema de Gestión del Riesgo</li>
-                        <li class="list-group-item"><i class="bi bi-building-fill-gear"></i> Fortalecer la cultura organizacional</li>
+                        <li class="list-group-item"><i class="bi bi-emoji-smile-fill"></i> Procurar la satisfacción de los asociados.</li>
+                        <li class="list-group-item"><i class="bi bi-chat-dots-fill"></i> Garantizar la comunicación con asociados.</li>
+                        <li class="list-group-item"><i class="bi bi-reception-4"></i> Ampliar la cobertura promoción para garantizar el crecimiento sostenido de la base social de FEMSEAPTO.</li>
+                        <li class="list-group-item"><i class="bi bi-piggy-bank-fill"></i> Mejorar el servicio de Ahorro.</li>
+                        <li class="list-group-item"><i class="bi bi-credit-card-fill"></i> Mejorar el servicio de Crédito.</li>
+                        <li class="list-group-item"><i class="bi bi-people-fill"></i> Mantener las actividades de bienestar social.</li>
+                        <li class="list-group-item"><i class="bi bi-bank2"></i> Mantener la sostenibilidad financiera.</li>
+                        <li class="list-group-item"><i class="bi bi-graph-up-arrow"></i> Realizar seguimiento a los indicadores financieros.</li>
+                        <li class="list-group-item"><i class="bi bi-currency-dollar"></i> Propiciar la cultura financiera.</li>
+                        <li class="list-group-item"><i class="bi bi-cpu-fill"></i> Gestionar la automatización de los servicios.</li>
+                        <li class="list-group-item"><i class="bi bi-line"></i> Generar un plan de mercadeo y comunicaciones con los asociados.</li>
+                        <li class="list-group-item"><i class="bi bi-file-earmark-ruled-fill"></i> Revisión integral de los reglamentos.</li>
+                        <li class="list-group-item"><i class="bi bi-exclamation-triangle-fill"></i> Gestión integral de los riesgos.</li>
                     </ul>
                 </div>
             </div>
@@ -126,12 +125,14 @@
                     Grupos De Interés
                 </div>
                 <div class="card-body">
-                    FEMSEAPTO debe mantener relaciones armónicas, constructivas y transparentes con los siguientes públicos:
+                    FEMSEAPTO debe mantener relaciones armónicas, constructivas y transparentes con los siguientes
+                    públicos:
                     <ul class="list-group list-group-flush card-text text-start">
                         <li class="list-group-item"><i class="bi bi-person-arms-up"></i> Asociados</li>
                         <li class="list-group-item"><i class="bi bi-briefcase-fill"></i> Empleados</li>
                         <li class="list-group-item"><i class="bi bi-box-seam-fill"></i> Proveedores</li>
-                        <li class="list-group-item"><i class="bi bi-building-fill-check"></i> Empresas generadoras de vinculo</li>
+                        <li class="list-group-item"><i class="bi bi-building-fill-check"></i> Empresas generadoras de
+                            vinculo</li>
                         <li class="list-group-item"><i class="bi bi-people-fill"></i> Comunidad en general</li>
                         <li class="list-group-item"><i class="bi bi-buildings-fill"></i> Estado</li>
                         <li class="list-group-item"><i class="bi bi-shop"></i> Competidores</li>
@@ -142,6 +143,4 @@
             </div>
         </div>
     </div>
-
-
 </div>
