--- a/front/src/app/components/public/footer/footer.component.html
+++ b/front/src/app/components/public/footer/footer.component.html
@@ -37,34 +37,16 @@
                         <ul class="list-unstyled d-flex footer-links">
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
-                                        href="https://www.tiktok.com/@ganaganaoficial" target="_blank">
-                                                <i class="bi bi-tiktok"></i>
-                                        </a>
-                                </li>
-                                <li class="ms-3">
-                                        <a class="link-body-emphasis"
-                                        href="https://www.facebook.com/ganaganaoficial" target="_blank">
-                                                <i class="bi bi-facebook"></i>
-                                        </a>
-                                </li>
-                                <li class="ms-3">
-                                        <a class="link-body-emphasis"
-                                        href="https://www.instagram.com/ganaganaoficial" target="_blank">
+                                        href="https://www.instagram.com/femseapto" target="_blank">
                                                 <i class="bi bi-instagram"></i>
                                         </a>
                                 </li>
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
-                                        href="https://twitter.com/ganaganaoficial" target="_blank">
-                                                <i class="bi bi-twitter-x"></i>
+                                        href="https://www.tiktok.com/@femseapto" target="_blank">
+                                                <i class="bi bi-tiktok"></i>
                                         </a>
-                                </li>
-                                <li class="ms-3">
-                                        <a class="link-body-emphasis"
-                                        href="https://youtube.com/@GanaGanaOficial?si=ev-dia3SmDGGOpsd" target="_blank">
-                                                <i class="bi bi-youtube"></i>
-                                        </a>
-                                </li>
+                                </li>     
                         </ul>
                 </div>
         </footer>
