Update UI and team image

--- a/front/src/app/components/public/login/login.component.html
+++ b/front/src/app/components/public/login/login.component.html
@@ -12,11 +12,11 @@
             <form class="row g-3" (ngSubmit)="onLogin()">
               <div class="col-md-12">
                 <label class="form-label">Usuario</label>
-                <input type="email" class="form-control" [(ngModel)]="usuario" name="usuario" placeholder="nombre.apellido">
+                <input type="email" class="form-control" [(ngModel)]="usuario" name="usuario" placeholder="Numero documento">
               </div>
               <div class="col-md-12">
                 <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" [(ngModel)]="contrasenia" name="contrasenia" placeholder="Tu contraseña">
+                <input type="password" class="form-control" [(ngModel)]="contrasenia" name="contrasenia" placeholder="********">
               </div>
               <div class="col-md-12">
                 <button type="submit" class="btn btn-primary">Ingresar</button>
