--- a/front/src/app/components/private/admin/components/generate-credit-request/generate-credit-request.component.html
+++ b/front/src/app/components/private/admin/components/generate-credit-request/generate-credit-request.component.html
@@ -1,1 +1,6 @@
-<button class="btn btn-primary btn-sm" (click)="generateExcel()">Generar</button>
+<button class="btn btn-primary btn-sm" (click)="onGenerateClick()" [disabled]="isLoading">
+    <span *ngIf="!isLoading">Generar</span>
+    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    <span *ngIf="isLoading"> Generando...</span>
+  </button>
+  
