Add fields to credit balance

--- a/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
+++ b/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
@@ -5,6 +5,7 @@
     <p-table
       #dt2
       [value]="savingWdRequests"
+      dataKey="id"
       styleClass="p-datatable-striped"
       [paginator]="true"
       [rows]="rows"
