--- a/front/src/app/components/private/admin/components/saving-requests/saving-requests.component.html
+++ b/front/src/app/components/private/admin/components/saving-requests/saving-requests.component.html
@@ -4,6 +4,7 @@
     <p-table
       #dt2
       [value]="savingRequests"
+      dataKey="id"
       styleClass="p-datatable-striped"
       [paginator]="true"
       [rows]="rows"
@@ -73,7 +74,7 @@
       </ng-template>
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="5">No se encontraron usuarios.</td>
+          <td colspan="5">No se encontraron solicitudes de ahorros.</td>
         </tr>
       </ng-template>
     </p-table>
