--- a/front/src/app/components/public/footer/footer.component.html
+++ b/front/src/app/components/public/footer/footer.component.html
@@ -4,7 +4,7 @@
                         <div class="col-12 col-md">
                                 <a routerLink="/"
                                         class="d-flex justify-content-center align-items-center mb-3 link-dark text-decoration-none">
-                                        <img src="../../../assets/logo_showcase.png" alt="" width="220px">
+                                        <img src="../../../assets/logo_showcase.png" alt="" width="180px">
                                 </a>
                         </div>
                         <div class="col-12 col-md">
@@ -22,18 +22,18 @@
                                 <h5><i class="bi bi-mailbox2"></i> Contacto</h5>
                                 <ul class="nav flex-column">
                                         <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">Móvil: +57
-                                                        321 403 0957 -
+                                                        321 228 9646 -
                                                         321 385 6420</a></li>
                                         <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">E-mail:
                                                         femseapto&#64;ganagana.com.co</a></li>
-                                        <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">PBX: +57
+                                        <!--<li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">PBX: +57
                                                         (8) 261 0014 -
-                                                        Ext: 150</a></li>
+                                                        Ext: 150</a></li>-->
                                 </ul>
                         </div>
                 </div>
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto - FEMSEAPTO</p> <!--Fondo de empleados de Seapto S.A. - FEMSEAPTO.-->
+                        <p>&copy; {{ currentYear }} Fondo de Empleados de Seapto - FEMSEAPTO</p> <!--Fondo de empleados de Seapto S.A. - FEMSEAPTO.-->
                         <ul class="list-unstyled d-flex footer-links">
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
