--- a/front/src/app/components/public/login/login.component.html
+++ b/front/src/app/components/public/login/login.component.html
@@ -12,7 +12,7 @@
             <form class="row g-3" (ngSubmit)="onLogin()">
               <div class="col-md-12">
                 <label class="form-label">Usuario</label>
-                <input type="email" class="form-control" [(ngModel)]="usuario" name="usuario" placeholder="Numero documento">
+                <input type="email" class="form-control" [(ngModel)]="usuario" name="usuario" placeholder="Número de documento">
               </div>
               <div class="col-md-12">
                 <label class="form-label">Contraseña</label>
