--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -133,6 +133,9 @@
               <li>
                 <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
               </li>
+              <li>
+                <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar Saldos de Ahorros</a>
+              </li>
             </ul>
           </div>
         </li>
@@ -283,6 +286,9 @@
           </li>
           <li>
             <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
+          </li>
+          <li>
+            <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos de ahorros</a>
           </li>
         </ul>
       </div>
